# haskell-trials

./: .gitignore  README.md  default.cabal  first.hs  hie.yaml  second.hs  third.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
sample-scotty-project/: .cabal-fmt-69061-aw2ZsiSDaNjk  CHANGELOG.md  README.md  cradle:  hie.yaml  sample-scotty-project  sample-scotty-project.cabal
sample-scotty-project/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
sample-scotty-project/src/: Main.hs
testout/: .cabal-fmt-63119-y80e5ab1DKaN  CHANGELOG.md  LICENSE  testout.cabal
testout/app/: Main.hs
testout/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
testout/dist-newstyle/packagedb/ghc-8.6.5/: package.cache  testout-0.1.0.0-inplace.conf
testout/lib/: MyLib.hs
