cabal-version:      3.0
name:               default
version:            0.1.0.0

license:            MIT
build-type:         Simple

executable first
  hs-source-dirs:   .
  main-is:          first.hs
  default-language: Haskell2010
  build-depends:    base          >=4.7 && <5

executable second
  hs-source-dirs:   .
  main-is:          second.hs
  default-language: Haskell2010
  build-depends:    base          >=4.7 && <5
                  , aeson
                  , http-client
                  , http-client-tls

executable third
  hs-source-dirs:   .
  main-is:          third.hs
  default-language: Haskell2010
  build-depends:    base          >=4.7 && <5

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
