cabal-version:      2.2
name:               sample-scotty-project
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/githubuser/sample-scotty-project#readme
license:            BSD-3-Clause
license-file:       LICENSE
author:             Author name here
maintainer:         example@example.com
copyright:          2025 Author name here
category:           Web
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

executable sample-scotty-project
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
    , aeson
    , base          >=4.7 && <5
    , bytestring
    , scotty
    , text
    , transformers

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
